# OutDetCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  outdet.onnx  outdet.trt  pytorch_to_onnx.py
src/: knncuda.cu  knncuda.h  outdet.cpp  outdet.h
